Fix x-axis width on mobile

--- a/src/encoded/static/scss/encoded/modules/_charts.scss
+++ b/src/encoded/static/scss/encoded/modules/_charts.scss
@@ -553,20 +553,27 @@
         }
         
         .x-axis-right-label {
-            > .row > div {
-                &:last-child {
-                    padding-left: 5px;
-                }
-                &:first-child {
-                    padding-right: 5px;
-                }
+            @include media-breakpoint-up(md){
+                > .row > div {
+                    &:last-child {
+                        padding-left: 5px;
+                    }
+                    &:first-child {
+                        padding-right: 5px;
+                    }
+                }   
             }
+
             .dropdown-heading {
                 margin: 0;
                 line-height: 33px;
                 white-space: nowrap;
                 text-align: right;
                 font-weight: 400;
+
+                @include media-breakpoint-down(md){
+                    text-align: left;
+                }
             }
         }
         .dropdown {
